--- a/style.css
+++ b/style.css
@@ -1,9 +1,134 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
 *,
 ::before,
 ::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Outfit", sans-serif;
+  font-family: "Red Hat Display", sans-serif;
+}
+:root {
+  /* Primary */
+  --primary-pale-blue: hsl(225, 100%, 94%);
+  --primary-bright-blue: hsl(245, 75%, 52%);
+  /* Neutral */
+  --very-pale-blue: hsl(225, 100%, 98%);
+  --desaturated-blue: hsl(224, 23%, 55%);
+  --dark-blue: hsl(223, 47%, 23%);
+}
+html,
+body {
+  width: 100%;
+}
+
+body {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background: beige;
+  background: var(--neutral-main-bg);
+  background: url(images/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
+  /* font-size: 18px; */
+}
+body * {
   /* outline: 1px solid red; */
+}
+
+.card {
+  width: 450px;
+  height: 698px;
+  border-radius: 15px;
+  overflow: hidden;
+  background: white;
+  background: linear-gradient(0deg, var(--very-pale-blue), white 99%);
+  background: linear-gradient(0deg, var(--primary-pale-blue), white 3%);
+  display: flex;
+  flex-direction: column;
+  box-shadow: inset 2px 0 1px var(--very-pale-blue),
+    2px 0px 0px var(--very-pale-blue);
+}
+.card-body {
+  flex-grow: 1;
+  width: calc(450px - 96px);
+  margin: auto;
+
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+}
+h1 {
+  font-weight: 900;
+  text-align: center;
+  color: var(--dark-blue);
+}
+h4 {
+  text-align: center;
+  color: var(--desaturated-blue);
+}
+.price {
+  height: 100px;
+  background: var(--very-pale-blue);
+  display: flex;
+  padding: 1em;
+  border-radius: 1em;
+}
+.price img {
+  width: 55px;
+  height: 55px;
+  align-self: center;
+}
+.plan {
+  align-self: center;
+  margin-left: 20px;
+  color: var(--dark-blue);
+  justify-content: space-between;
+  height: 55px;
+  display: flex;
+  flex-direction: column;
+}
+.plan span:first-child {
+  color: inherit;
+  font-weight: 900;
+}
+.plan span {
+  color: var(--desaturated-blue);
+}
+.price a {
+  align-self: center;
+  margin-left: auto;
+}
+.price a:hover {
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--desaturated-blue);
+  color: var(--dark-blue);
+  color: #766cf1;
+}
+.btn-proceed {
+  width: 100%;
+  padding: 1em;
+  background: var(--primary-bright-blue);
+  color: white;
+  font-weight: 700;
+  border-radius: 1em;
+  border: none;
+  outline: none;
+}
+.btn-proceed:hover {
+  cursor: pointer;
+  background: var(--dark-blue);
+  background: #766cf1;
+}
+.btn-cancel {
+  color: var(--desaturated-blue);
+  background: transparent;
+  border: none;
+  outline: none;
+  font-weight: 900;
+}
+.btn-cancel:hover {
+  cursor: pointer;
+  color: var(--dark-blue);
+  font-weight: 900;
 }
