change card height to 90%

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 .card {
   width: 450px;
-  height: 698px;
+  height: 90%;
   border-radius: 15px;
   overflow: hidden;
   background: white;
