--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
 }
 
 .card {
-  width: 450px;
+  max-width: 450px;
+  width: 87%;
   height: 90%;
   border-radius: 15px;
   overflow: hidden;
@@ -48,6 +49,8 @@ body {
 .card-body {
   flex-grow: 1;
   width: calc(450px - 96px);
+  width: 100%;
+  padding: 0 1em;
   margin: auto;
 
   justify-content: space-evenly;
@@ -94,6 +97,8 @@ h4 {
 .price a {
   align-self: center;
   margin-left: auto;
+  width: auto;
+  height: auto;
 }
 .price a:hover {
   cursor: pointer;
@@ -128,4 +133,10 @@ h4 {
   cursor: pointer;
   color: var(--dark-blue);
   font-weight: 900;
+}
+
+@media screen and (max-width: 375px) {
+  .card {
+    max-width: 327px;
+  }
 }
