--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   flex-grow: 1;
   width: calc(450px - 96px);
   width: 100%;
-  padding: 0 1em;
+  padding: 0 8%;
   margin: auto;
 
   justify-content: space-evenly;
@@ -80,7 +80,7 @@ h4 {
 }
 .plan {
   align-self: center;
-  margin-left: 20px;
+  padding-left: 3%;
   color: var(--dark-blue);
   justify-content: space-between;
   height: 55px;
